syntax = "proto3";

option csharp_namespace = "ELibrary.Protos";

package elibrary;

service SearchBook {
	rpc GetBookOrderByTime (GetBookRequest) returns (stream GetBookResponse);
	rpc GetBookOrderByScore (GetBookRequest) returns (stream GetBookResponse);
	rpc GetBookOrderByPublishYear (GetBookRequest) returns (stream GetBookResponse);
	rpc GetBookOrderByUser (GetBookByUserRequest) returns (stream GetBookResponse);
	rpc GetBookDetail (GetBookDetailRequest) returns (GetBookDetailResponse);
}

message GetBookRequest 
{
	bool IsDesc = 1;
	string Title = 2;
	string Language = 3;
	string Classification = 4;
	string Press = 5;
	string Writer = 6;
}

message GetBookResponse
{
	string Title = 1;
	string Description = 2;
	string Id = 3;
}

message GetBookDetailRequest
{
	string Id = 1;
}

message GetBookDetailResponse
{
	string Title = 1;
	string Description = 2;
	string Language = 3;
	int32 Pages = 4;
	int32 PublishYear = 5;
	string Classification = 6;
	string Press = 7;
	string Writer = 8;
	string UserName = 9;
	string ImageUrl = 10;
	string FileUrl = 11;
}

message GetBookByUserRequest
{
	string UserId = 1;
}